--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,12 @@
+TAG: mappingload-1-0-1
+DATE: 09/06/2002
+STAFF: lec
+RELEASE: A
+CHANGES: new
+
 TAG: mappingload-1-0-0
 DATE: 08/30/2002
 STAFF: lec
 RELEASE: A
 CHANGES: new
+
