--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mappingload-1-0-3
+DATE: 02/03/2003
+STAFF: lec
+RELEASE: A
+CHANGES: TR 3928/Fantom2 load
+
 TAG: mappingload-1-0-2
 DATE: 10/21/2002
 STAFF: lec
