--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mappingload-1-0-5
+DATE: 06/12/2003
+STAFF: lec
+RELEASE: A
+CHANGES: TR 4010
+
 TAG: mappingload-1-0-4
 DATE: 02/10/2003
 STAFF: lec
