--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mappingload-1-0-6
+DATE: 03/22/2004
+STAFF: lec
+RELEASE: A
+CHANGES: added "Description"
+
 TAG: mappingload-1-0-5
 DATE: 06/12/2003
 STAFF: lec
