--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mappingload-2-0-0
+DATE: 04/01/2004
+STAFF: lec
+RELEASE: A
+CHANGES: JSAM
+
 TAG: mappingload-1-0-6
 DATE: 03/22/2004
 STAFF: lec
