--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mappingload-2-0-1
+DATE: 05/13/2004
+STAFF: lec
+RELEASE: A
+CHANGES: JSAM;mapping.csh
+
 TAG: mappingload-2-0-0
 DATE: 04/01/2004
 STAFF: lec
