--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mappingload-2-0-2
+DATE: 06/21/2004
+STAFF: lec
+RELEASE: A
+CHANGES: remove duplicate check
+
 TAG: mappingload-2-0-1
 DATE: 05/13/2004
 STAFF: lec
