--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mappingload-3-1-0-2
+DATE: 02/07/2005
+STAFF: lec
+RELEASE: A
+CHANGES: add a way to add a new chromosome experiment incrementally
+
 TAG: mappingload-3-1-0-1
 DATE: 02/01/2005
 STAFF: lec
