--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mappingload-3-1-0-7
+DATE: 09/27/2005
+STAFF: lec
+RELEASE: A
+CHANGES: fix update MLD_Expts modification date
+
 TAG: mappingload-3-1-0-6
 DATE: 08/08/2005
 STAFF: lec
