--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+TAG: mappingload-3-5-0-1
+DATE: 04/20/2006
+STAFF: lec
+RELEASE: A
+CHANGES: 
+1) MGI 3.5; remove MLD_Marker
+
 TAG: mappingload-3-1-0-8
 DATE: 04/14/2006
 STAFF: lec
