--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+TAG: mappingload-3-5-0-3
+DATE: 07/27/2006
+STAFF: lec
+RELEASE: A
+CHANGES: 
+1) build 36
+
 TAG: mappingload-3-5-0-2
 DATE: 05/02/2006
 STAFF: lec
