--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+TAG: mappingload-build36-2
+DATE: 07/28/2006
+STAFF: lec
+RELEASE: A
+CHANGES: 
+1) build 36
+
 TAG: mappingload-build36-1
 DATE: 07/27/2006
 STAFF: lec
