--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mappingload-3-5-1-2
+DATE: 09/21/2006
+STAFF: lec
+CHANGES: 
+1) TR 7894; mgiconfig
+
 TAG: mappingload-3-5-1-1
 DATE: 09/06/2006
 STAFF: lec
