--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: mappingload-6-0-0-2
+DATE: 09/22/2015
+STAFF: sc
+CHANGES: update delimiter add commit, etc etc
+
 TAG: mappingload-6-0-0-1
 DATE: 09/14/2015
 STAFF: sc
