--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mappingload-6-0-11-1
+DATE: 10/31/2017
+STAFF: lec
+CHANGES: 
+1) TR12667/Tssr markers
+
 TAG: mappingload-6-0-1-4
 TAG: mappingload-6-0-1-3
 TAG: mappingload-6-0-1-2
