--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mappingload-6-0-12-?
+DATE: 01/22/2018
+STAFF: lec
+CHANGES: TR12662/GMC
+1) sequenceNum is obsolete
+
 TAG: mappingload-6-0-11-1
 DATE: 11/01/2017
 STAFF: lec
