--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,5 @@
-TAG: mappingload-6-0-12-?
-DATE: 01/22/2018
+TAG: mappingload-6-0-12-1
+DATE: 03/07/2018
 STAFF: lec
 CHANGES: TR12662/GMC
 1) sequenceNum is obsolete
