--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mappingload-6-0-22-2
+DATE: 05/04/2023
+STAFF: sc
+CHANGES:
+Added upates to mappingload.py that were missing from tag
+
 TAG: mappingload-6-0-22-1
 DATE: 01/26/2023
 STAFF: 
